# kill.py

./: README.md  setup.cfg
tests/kill/examples/: err.py
